--- a/blog/templates/blog/frontpage.html
+++ b/blog/templates/blog/frontpage.html
@@ -42,6 +42,10 @@
                         </div>
                     </div>
                 </div>
+                {% empty %}
+                <div class="notification">
+                    <p>No posts yet!</p>
+                </div>
                 {% endfor %}
             </div>
 
