rm db.sqlite3 then migrate

--- a/blog/templates/blog/frontpage.html
+++ b/blog/templates/blog/frontpage.html
@@ -44,7 +44,7 @@
                 </div>
                 {% empty %}
                 <div class="notification">
-                    <p>No posts yet!</p>
+                    <p>No posts yet!!</p>
                 </div>
                 {% endfor %}
             </div>
